--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,9 +5,10 @@
     <h1 class="fw-semibold text-center">Nueva Escuela</h1>
   </div>
   <div class="row">
-    <div class="col-6"  id="login" #content>
+    <div class="col-6" >
       <img src="./assets/login/img.png" alt="img" class="img-fluid">
     </div>
+    <app-chart id="login" #content></app-chart>
     <div class="col-6">
       <h3 class="text-center fw-normal">Iniciar sesión</h3>
 
@@ -27,10 +28,11 @@
         </div>
       </div>
 
-      <button class="btn btn-primary" (click)="makePDF()" >Iniciar sesión</button>
+      <button class="btn btn-primary" (click)="makePDF()"  >Iniciar sesión</button>
     </div>
   </div>
 
   <h5 class="fw-light text-center">Transformamos la educación a partir de la tecnología</h5>
+
 
 </div>
