error: No se muestra el login

--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -1,7 +1,4 @@
-<div class="charts">
-
-  <div class="line" [chart]="lineChart">
-
-  </div>
-
+<div class="charts" >
+  <div #chart class="line" [chart]="lineChart"></div>
+  <div #chart class="bar" [chart]="pieChart"></div>
 </div>
