--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,38 +1,35 @@
 <div class="container-fluid">
 
-
   <div class="row">
     <h1 class="fw-semibold text-center">Nueva Escuela</h1>
   </div>
   <div class="row">
-    <div class="col-6" >
+    <div class="col-6">
       <img src="./assets/login/img.png" alt="img" class="img-fluid">
     </div>
-    <app-chart id="login" #content></app-chart>
     <div class="col-6">
       <h3 class="text-center fw-normal">Iniciar sesión</h3>
-
       <div class="form-login">
-
-        <div class="row">
-          <label>Correo</label>
-        </div>
-        <div class="row">
-          <input type="text" placeholder="Escribe tu correo aquí...">
-        </div>
-        <div class="row">
-          <label>Contraseña</label>
-        </div>
-        <div class="row">
-          <input type="text" placeholder="Escribe tu contraseña aquí...">
-        </div>
+        <form class="form" [formGroup]="iniciarSesionForm">
+          <div class="row">
+            <label>Correo</label>
+          </div>
+          <div class="row">
+            <input type="text" placeholder="Escribe tu correo aquí..." formControlName="correo">
+          </div>
+          <div class="row">
+            <label>Contraseña</label>
+          </div>
+          <div class="row">
+            <input type="password" placeholder="Escribe tu contraseña aquí..." formControlName="contrasenia">
+          </div>
+        </form>
       </div>
 
-      <button class="btn btn-primary" (click)="makePDF()"  >Iniciar sesión</button>
+      <button class="btn btn-primary" (click)="iniciarSesion()">Iniciar sesión</button>
     </div>
   </div>
 
   <h5 class="fw-light text-center">Transformamos la educación a partir de la tecnología</h5>
-
 
 </div>
