--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="row">
     <div class="col-6">
-      <img src="./assets/login/img.png" alt="img" class="img-fluid">
+      <img src="../../../assets/login/img.png" alt="img" class="img-fluid">
     </div>
     <div class="col-6">
       <h3 class="text-center fw-normal">Iniciar sesión</h3>
