--- a/src/app/components/admin/vista-admin/vista-admin.component.html
+++ b/src/app/components/admin/vista-admin/vista-admin.component.html
@@ -1,7 +1,7 @@
 <div id="div-background" class="vh-100">
 
   <div class="row">
-  <app-nav></app-nav>
+    <app-nav></app-nav>
   </div>
 
   <div>
@@ -10,21 +10,14 @@
 
   <div class="row">
 
-    <div class="col-6">
 
-      <div class="div-chart" id="left-chart">
-        <h3 class="text-center fw-light">Estudiantes por Materias</h3>
-        <app-chart></app-chart>
-      </div>
-
+    <div class="div-chart vw-100" id="left-chart">
+      <h3 class="text-center fw-light">Estudiantes por Materias</h3>
+      <app-chart></app-chart>
     </div>
-    <div class="col-6">
 
-      <div class="div-chart" id="right-chart">
-          <h3 class="text-center fw-light">Estudiantes por Grados</h3>
-        <app-chart></app-chart>
-      </div>
-
-    </div>
   </div>
+
+
 </div>
+
