Es responsive la grafica

--- a/src/app/components/admin/vista-admin/vista-admin.component.html
+++ b/src/app/components/admin/vista-admin/vista-admin.component.html
@@ -1,4 +1,4 @@
-<div id="div-background" class="vh-100">
+<div id="div-background" class="vh-100 vw-100">
 
   <div class="row">
     <app-nav></app-nav>
