Funciona la descarga de pdfs la puta madre

--- a/src/app/components/chart/chart.component.html
+++ b/src/app/components/chart/chart.component.html
@@ -1,4 +1,4 @@
 <div class="charts" >
-  <div #chart class="line" [chart]="lineChart"></div>
-  <div #chart class="bar" [chart]="pieChart"></div>
+  <div #content class="line" [chart]="lineChart"></div>
+  <button (click)="makePDF()">Guardar reporte</button>
 </div>
