--- a/src/app/components/admin/vista-admin/vista-admin.component.html
+++ b/src/app/components/admin/vista-admin/vista-admin.component.html
@@ -11,9 +11,9 @@
   <div class="row">
 
 
-    <div class="div-chart vw-100" id="left-chart">
+    <div #content class="div-chart vw-100" id="left-chart">
       <h3 class="text-center fw-light">Estudiantes por Materias</h3>
-      <app-chart></app-chart>
+      <app-chart ></app-chart>
     </div>
 
   </div>
