Funciona una opcion desconocida

--- a/src/app/components/chart/chart.component.html
+++ b/src/app/components/chart/chart.component.html
@@ -1,4 +1,4 @@
 <div class="charts" >
   <div #content class="line" [chart]="lineChart"></div>
-  <button (click)="makePDF()">Guardar reporte</button>
+  <button class="btn-primary btn" (click)="makePDF()">Guardar reporte</button>
 </div>
