--- a/src/app/components/admin/vista-admin/vista-admin.component.html
+++ b/src/app/components/admin/vista-admin/vista-admin.component.html
@@ -11,7 +11,7 @@
   <div class="row">
 
 
-    <div #content class="div-chart vw-100" id="left-chart">
+    <div class="div-chart vw-100" id="left-chart">
       <h3 class="text-center fw-light">Estudiantes por Materias</h3>
       <app-chart ></app-chart>
     </div>
