Se muestra el grafico de barras para el estudiante

--- a/src/app/components/admin/vista-admin/vista-admin.component.html
+++ b/src/app/components/admin/vista-admin/vista-admin.component.html
@@ -12,8 +12,8 @@
 
 
     <div class="div-chart vw-100" id="left-chart">
-      <h3 class="text-center fw-light">Estudiantes por Materias</h3>
-      <app-chart ></app-chart>
+      <h3 class="text-center fw-light text-light">Reportes de estudiantes </h3>
+      <app-chart-admin ></app-chart-admin>
     </div>
 
   </div>
