--- a/src/app/components/estudiante/estudiante.component.html
+++ b/src/app/components/estudiante/estudiante.component.html
@@ -12,9 +12,14 @@
   <div class="row">
 
 
-    <div class="div-chart vw-100" id="left-chart">
+    <div class="col-6" id="left-chart">
       <h3 class="text-center fw-light">Estudiantes por Materias</h3>
       <app-ponderado-chart></app-ponderado-chart>
+    </div>
+
+    <div class="col-6">
+      <h3 class="text-center fw-light">Temas del estudiante</h3>
+      <app-temas-chart></app-temas-chart>
     </div>
 
   </div>
