--- a/src/app/components/estudiante/estudiante.component.html
+++ b/src/app/components/estudiante/estudiante.component.html
@@ -1,4 +1,4 @@
-<div id="div-background" class="vh-100 vw-100">
+<div id="div-background" >
 
   <div class="row">
     <app-nav></app-nav>
@@ -13,15 +13,20 @@
 
 
     <div class="col-6" id="left-chart">
-      <h3 class="text-center fw-light">Estudiantes por Materias</h3>
+      <h3 class="text-center  text-white fw-light">Promedio por Materias</h3>
       <app-ponderado-chart></app-ponderado-chart>
     </div>
 
     <div class="col-6">
-      <h3 class="text-center fw-light">Temas del estudiante</h3>
+      <h3 class="text-center  text-white fw-light">Temas del estudiante</h3>
       <app-temas-chart></app-temas-chart>
     </div>
+    <div class="col-4">
+      <h3 class="text-center  text-white fw-light">Historial del estudiante</h3>
+      <app-historico-notas></app-historico-notas>
+    </div>
 
+    
   </div>
 
 
